--- a/mybagpipewebsite3.html
+++ b/mybagpipewebsite3.html
@@ -1,19 +1,21 @@
-bagpipewebsite
-==============
+
 <!DOCTYPE html>
 <html>
 <head>
 	<title>
-		<h1>STEVEN NORTON, Professional Bagpiper</h1>
+		<h1>PAGE 3</h1>
 	</title>
 </head>
 <body>
 	<h1>STEVEN NORTON</h1>
 	<p><h3>Professional Bagpiper</h3></p>
+
 	<p><h6>Klick the Kilt to Enter</h6></p>
-	    <a href="mybagpipewebsite2.html">
-    <img src="bagpipeweb.jpg"/>
+	    <a href=“***add http link to 2nd page here***”>
+    <img src=“”****”Add Conan pic link here***”/>
     </a>
 
 	</body>
+
+
 </html>
